# ariadne

./: .gitignore  README.md
ariadne-core/: pyproject.toml
ariadne-core/ariadne/: __init__.py
ariadne-core/ariadne/analyzer/: trace.py
ariadne-core/ariadne/api/: server.py
ariadne-core/ariadne/cli/: main.py
ariadne-core/ariadne/collector/: cpu.py  iommu.py  memory.py  numa.py  pcie.py
ariadne-core/ariadne/model/: topology.py  types.py
ariadne-core/ariadne/viz/: terminal.py
ariadne-core/ariadne/web/static/: core.js  style.css  ui.js
ariadne-core/ariadne/web/templates/: index.html
ariadne-core/tests/: test_analyzer.py  test_api.py  test_collector_cpu.py  test_collector_memory.py  test_collector_numa.py
docs/: COMPARISON.md  DATA_MODEL.md  DESIGN.md  REQUIREMENTS.md  UI_FEATURES.md  UI_GUIDE.md
