[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ariadne-core"
version = "0.1.0"
description = "System topology E2E data flow tracer and simulator"
requires-python = ">=3.10"
dependencies = [
  "networkx>=3.0",
  "pydantic>=2.0",
  "rich>=13.0",
  "typer>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["ariadne"]

[project.scripts]
ariadne = "ariadne.cli.main:app"
